tests/NormalTests/paczka1/fuzzy1/65052338.err
Error in line 1: ABxPvd S402 432,5
Error in line 17: A903 A193 36,2
Error in line 18: A903 S954 55,7
Error in line 10: ABxPvd A193 274,5
Error in line 19: A903 S402 35,0
